--- a/css/include/components/colors-dark-GENERATED.css
+++ b/css/include/components/colors-dark-GENERATED.css
@@ -88,7 +88,7 @@
 
     /*  Footnote references.
      */
-    --GW-footnote-ref-highlight-box-shadow-color: #7c7c7c;
+    --GW-highlighted-link-outline-color: #8b8b8b;
 
     /*  Sidenotes.
      */
