--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -89,7 +89,7 @@
 
     /*  Footnote references.
      */
-    --GW-footnote-ref-highlight-box-shadow-color: #aaa;
+    --GW-highlighted-link-outline-color: #999;
 
     /*  Sidenotes.
      */
@@ -1747,7 +1747,7 @@ body.special-halloween-dark {
 
     --GW-body-link-hover-color: var(--GW-blood-red-arterial);
 
-    --GW-footnote-ref-highlight-box-shadow-color: var(--GW-blood-red);
+    --GW-highlighted-link-outline-color: var(--GW-blood-red);
 }
 
 body.special-halloween-dark blockquote {
@@ -1878,7 +1878,7 @@ body.special-halloween-dark h6 {
 
     /*  Footnote references.
      */
-    --GW-footnote-ref-highlight-box-shadow-color: #7c7c7c;
+    --GW-highlighted-link-outline-color: #8b8b8b;
 
     /*  Sidenotes.
      */
