--- a/template/inlined-foot-template.html
+++ b/template/inlined-foot-template.html
@@ -5,8 +5,8 @@
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js" defer></script>
-    <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
-    <script src="/static/js/sidenotes.js" defer></script>
+    <!-- JS library for typography rectification -->
+    <script src="/static/js/typography.js" defer></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js" defer></script>
     <script src="/static/js/popins.js" defer></script>
@@ -18,11 +18,15 @@
     <script src="/static/js/extracts-content.js" defer></script>
     <script src="/static/js/extracts-options.js" defer></script>
 
-    <!-- Misc JS -->
+	<!-- JS library for in-browser hyphenation -->
 	<script src="/static/js/Hyphenopoly_Loader.js" defer></script>
-    <script src="/static/js/typography.js" defer></script>
+    <!-- Misc JS -->
     <script src="/static/js/rewrite.js" defer></script>
+    <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
+    <script src="/static/js/sidenotes.js" defer></script>
+    <!-- JS library for client-side transclusion -->
     <script src="/static/js/transclude.js" defer></script>
+    <!-- JS library for collapsed sections -->
     <script src="/static/js/collapse.js" defer></script>
 
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
