--- a/css/default.css
+++ b/css/default.css
@@ -1520,6 +1520,7 @@ sup {
     line-height: 0.3em;
     font-feature-settings: 'lnum';
 }
+
 a.footnote-ref sup {
     vertical-align: baseline;
     font-size: 0.75em;
@@ -1579,6 +1580,17 @@ h1 sub, h1 sup, h2 sub, h2 sup {
 .markdownBody h2 a:link > sub,
 .markdownBody h2 a:link > sup {
     padding-left: 0em;
+}
+
+/*	‘Foreign’ footnotes.
+ */
+sup a,
+sub a {
+    margin-left: 0.1em;
+}
+sup a + a,
+sub a + a {
+    margin-left: 0.2em;
 }
 
 /*=------------------------=*/
