--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1125,6 +1125,13 @@ May be able at some point to simplify this using regular link underlining, since
         -0.17em 0       var(--link-underline-background-color);
 }
 
+/*	Links with decoration disabled.
+ */
+.markdownBody a.decorate-not:link,
+.markdownBody a.decorate-not:link * {
+    background-image: none;
+    text-shadow: none;
+}
 
 /* eliminate the blurring of headers and links when selecting by overriding the text-shadow: */
 ::selection {
