--- a/css/links.css
+++ b/css/links.css
@@ -12,7 +12,7 @@
 /* so users don't get frustrated hovering over links which have no useful annotation (which is an unfortunate number). */
 /* At some point, if enough links get annotated & annotation is the default, we might flip this to be a warning for non-annotated links. */
 /* We exclude it on the homepage because every linked page has a description/abstract, and the triangles everywhere add a lot of visual clutter. */
-.has-content {
+.has-content.has-indicator-hook {
     margin: 0 0.08em;
     padding-left: 0.3em;
     position: relative;
@@ -20,12 +20,17 @@
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
 }
+
 .has-content .indicator-hook {
     position: relative;
     padding-left: 0.3em;
     margin-left: -0.3em;
     z-index: -1;
 }
+.has-content:not(.has-indicator-hook) .indicator-hook {
+	display: none;
+}
+
 .has-content .indicator-hook::before {
     content: " ";
     position: absolute;
@@ -52,17 +57,9 @@
         0 calc(100% - 0.1em);
     background-repeat: no-repeat;
 }
-.TOC .has-content,
-body.index #markdownBody .has-content {
-    margin: 0;
-    padding-left: 0;
-}
-.TOC .has-content .indicator-hook,
-#sidebar .has-content .indicator-hook,
-body.index #markdownBody .has-content .indicator-hook {
-    display: none;
-}
 
+/*	Dotted underlines for annotated links.
+ */
 .markdownBody a.has-annotation {
     background-image: var(--GW-dotted-underline-background-image);
     background-size: 2px 1px;
@@ -70,11 +67,8 @@ body.index #markdownBody .has-content .indicator-hook {
 .markdownBody a.has-annotation:hover {
     background-image: var(--GW-dotted-underline-hover-background-image);
 }
-
-a.decorate-not:link,
-a.decorate-not:link * {
-    background-image: none;
-    text-shadow: none;
+.markdownBody a.has-annotation.decorate-not {
+	background-image: none;
 }
 
 
