Fix obscure Wikipedia popups bug

--- a/template/include/annotation-blockquote-inside.tmpl
+++ b/template/include/annotation-blockquote-inside.tmpl
@@ -7,6 +7,7 @@
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <{titleLinkIconMetadata}>
 			   ><{fullTitleHTML}></a>\
+		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links">(<{secondaryTitleLinksHTML}>)</span><[IFEND]>\
 		<[IF abstract & ![ originalURL | authorDateAux ] ]>:<[IFEND]>\
 
 		<[IF originalURL]>
