default.html: noscript: make warning->error to emphasize to HNers browsing with NoScript that that's gonne fuck up a lot of shit because it's 2023 not 2003, and they shouldn't be surprised if stuff is broken -_-

--- a/template/default.html
+++ b/template/default.html
@@ -114,7 +114,7 @@
         </div>
         $endif$
 
-        <noscript><div id="noscript-warning-header" class="admonition warning"><div class="admonition-title"><p>[<strong>Warning</strong>: JS Disabled!]</p></div> <p>[For support of <a href="/design" title="About: Gwern.net Design: principles, features, links, tricks">website features</a> (tablesorting, collapsible sections, image zooming, link annotation popups/popins & transclusions, sidenotes), please enable JavaScript.]</p></div></noscript>
+        <noscript><div id="noscript-warning-header" class="admonition error"><div class="admonition-title"><p>[<strong>Warning</strong>: JS Disabled!]</p></div> <p>[For support of <a href="/design" title="About: Gwern.net Design: principles, features, links, tricks">website features</a> (link annotation popups/popins & transclusions, collapsible sections, tablesorting, image zooming, sidenotes etc), you must enable JavaScript!]</p></div></noscript>
 
         $body$
 
