--- a/template/include/annotation-blockquote-outside.tmpl
+++ b/template/include/annotation-blockquote-outside.tmpl
@@ -7,7 +7,7 @@
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <{titleLinkIconMetadata}>
 			   ><{titleHTML}></a>\
-		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links">(<{secondaryTitleLinksHTML}>)</span><[IFEND]>\
+		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IFEND]>\
 
 		<[IF originalURL]>
 		<span class="originalURL">[<a
