--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -3910,3 +3910,7 @@ ReaderMode.injectStyleBlock(ReaderMode.styles, "reader-mode-styles");
 //  Activate saved mode, once the <body> element is loaded (and classes known).
 doWhenBodyExists(ReaderMode.setMode);
 </script>
+
+<link rel="preload" href="/static/css/fonts.css?v=1682186236" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="preload" href="/static/css/default.css?v=1682107763" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="preload" href="/static/css/links.css?v=1681857102" as="style" onload="this.onload=null;this.rel='stylesheet'">
