Somewhat refactor asset versioning and related build code

--- a/template/inlined-foot-template.html
+++ b/template/inlined-foot-template.html
@@ -17,7 +17,6 @@
     <script src="/static/js/extracts-annotations.js" defer></script>
     <script src="/static/js/extracts-content.js" defer></script>
     <script src="/static/js/extracts-options.js" defer></script>
-
 	<!-- JS library for in-browser hyphenation -->
 	<script src="/static/js/Hyphenopoly_Loader.js" defer></script>
     <!-- Misc JS -->
@@ -28,13 +27,9 @@
     <script src="/static/js/transclude.js" defer></script>
     <!-- JS library for collapsed sections -->
     <script src="/static/js/collapse.js" defer></script>
-
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
     <script src="/static/js/dark-mode.js" defer></script>
-
     <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
     <script src="/static/js/reader-mode.js" defer></script>
-    <!-- JS library for clickable/zoomable images, for images larger than can be displayed in -->
-    <!-- the body: /static/js/image-focus.js -->
-    <!-- not lazy-loaded due to various bugs -->
+    <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
     <script src="/static/js/image-focus.js" defer></script>
