--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><noscript><noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682186236"></noscript></noscript></noscript>
-	<noscript><noscript><noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682107763"></noscript></noscript></noscript>
-	<noscript><noscript><noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1681857102"></noscript></noscript></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197002"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682107763"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1681857102"></noscript>
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682062681" defer></script>
@@ -17,7 +17,6 @@
     <script src="/static/js/extracts-annotations.js?v=1681929143" defer></script>
     <script src="/static/js/extracts-content.js?v=1682034546" defer></script>
     <script src="/static/js/extracts-options.js?v=1669582509" defer></script>
-
 	<!-- JS library for in-browser hyphenation -->
 	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
     <!-- Misc JS -->
@@ -28,13 +27,9 @@
     <script src="/static/js/transclude.js?v=1681954354" defer></script>
     <!-- JS library for collapsed sections -->
     <script src="/static/js/collapse.js?v=1682106177" defer></script>
-
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
     <script src="/static/js/dark-mode.js?v=1681775495" defer></script>
-
     <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
     <script src="/static/js/reader-mode.js?v=1681775523" defer></script>
-    <!-- JS library for clickable/zoomable images, for images larger than can be displayed in -->
-    <!-- the body: /static/js/image-focus.js -->
-    <!-- not lazy-loaded due to various bugs -->
+    <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
     <script src="/static/js/image-focus.js?v=1682105671" defer></script>
