--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422">
-	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682107763">
-	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1681857102">
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682231889"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1681857102"></noscript>
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682062681" defer></script>
