--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422">
-	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682292224">
-	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813">
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682372732"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813"></noscript>
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682062681" defer></script>
@@ -13,9 +13,9 @@
     <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
     <script src="/static/js/annotations.js?v=1682062718" defer></script>
     <script src="/static/js/content.js?v=1681949955" defer></script>
-    <script src="/static/js/extracts.js?v=1682105101" defer></script>
+    <script src="/static/js/extracts.js?v=1682372623" defer></script>
     <script src="/static/js/extracts-annotations.js?v=1681929143" defer></script>
-    <script src="/static/js/extracts-content.js?v=1682034546" defer></script>
+    <script src="/static/js/extracts-content.js?v=1682368839" defer></script>
     <script src="/static/js/extracts-options.js?v=1669582509" defer></script>
 	<!-- JS library for in-browser hyphenation -->
 	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
@@ -32,4 +32,4 @@
     <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
     <script src="/static/js/reader-mode.js?v=1681775523" defer></script>
     <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
-    <script src="/static/js/image-focus.js?v=1682105671" defer></script>
+    <script src="/static/js/image-focus.js?v=1682371991" defer></script>
