Fix bug in pre-commit hook

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -3913,3 +3913,4 @@ doWhenBodyExists(ReaderMode.setMode);
 <link rel="preload" href="/static/css/fonts.css?v=1682197422" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/default.css?v=1682372732" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1682237813" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/img/icon/icons.svg" as="image">
