Fix some bugs in image handling

--- a/css/default.css
+++ b/css/default.css
@@ -1336,10 +1336,11 @@ figure.width-full {
 img::before {
     content: attr(alt);
     font-family: var(--GW-sans-serif-font-stack);
-    display: block;
+    display: flex;
+    flex-flow: column;
     padding: 0.5em 0.75em;
     background-color: var(--background-color);
-    text-align: left;
+    text-align: center;
     box-sizing: border-box;
     height: 100%;
 }
