--- a/css/default.css
+++ b/css/default.css
@@ -1338,6 +1338,7 @@ img::before {
     font-family: var(--GW-sans-serif-font-stack);
     display: flex;
     flex-flow: column;
+    justify-content: center;
     padding: 0.5em 0.75em;
     background-color: var(--background-color);
     text-align: center;
@@ -3399,6 +3400,34 @@ body.index-directory #footer {
     overflow: hidden;
     width: auto;
     height: auto;
+}
+
+#image-focus-overlay img.loading {
+	outline: 1px solid var(--SA-image-focus-overlay-image-caption-separator-color);
+}
+#image-focus-overlay .loading-spinner {
+	visibility: hidden;
+	color: var(--SA-image-focus-overlay-image-caption-separator-color);
+	width: 40vw;
+	height: fit-content;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.4;
+    pointer-events: none;
+}
+#image-focus-overlay .loading-spinner svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    max-height: 20vh;
+    animation: fa-spin 2s infinite linear;
+}
+#image-focus-overlay img.loading + .loading-spinner {
+	visibility: visible;
 }
 
 /*=-------------------=*/
