--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,7 +1,7 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682443446"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813"></noscript>
+	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1682197422">
+	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1682443446">
+	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682237813">
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1682062681" defer></script>
@@ -26,7 +26,7 @@
     <!-- JS library for client-side transclusion -->
     <script src="/static/js/transclude.js?v=1681954354" defer></script>
     <!-- JS library for collapsed sections -->
-    <script src="/static/js/collapse.js?v=1682225838" defer></script>
+    <script src="/static/js/collapse.js?v=1682444532" defer></script>
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
     <script src="/static/js/dark-mode.js?v=1681775495" defer></script>
     <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
